--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,3 +10,12 @@ data_validation:
   root_dir: artifacts/data_validation
   unzip_data_dir: artifacts/data_ingestion/Dataset
   status_file: artifacts/data_validation/status.txt
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/Dataset
+  train_data_path: artifacts/data_transformation/train_data.npy
+  train_labels_path: artifacts/data_transformation/train_labels.npy
+  test_data_path: artifacts/data_transformation/test_data.npy 
+  test_labels_path: artifacts/data_transformation/test_labels.npy
+    
