--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,4 +18,11 @@ data_transformation:
   train_labels_path: artifacts/data_transformation/train_labels.npy
   test_data_path: artifacts/data_transformation/test_data.npy 
   test_labels_path: artifacts/data_transformation/test_labels.npy
-    
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/train_data.npy
+  train_labels_path: artifacts/data_transformation/train_labels.npy
+  test_data_path: artifacts/data_transformation/test_data.npy 
+  test_labels_path: artifacts/data_transformation/test_labels.npy
+  model_name: model.joblib
